# langzeitarchiv-manager

./: .gitignore  README.md  pyproject.toml  specification.md
docs/: iso-vs-hdiutil.md
lam/: __init__.py  cli.py  config.py
lam/pack/: __init__.py  packager.py  par2.py  validator.py
tests/: test_config.py  test_packager.py  test_validator.py
